# Draxon

./: .gitignore  Install-ffmpeg.md  README.md  daxon.py  draxon.py  pyproject.toml  requirements.txt  yt_subs.py
core/: config.py  downloader.py  interface.py  models.py  utils.py
draxon/: __main__.py  app.py
draxon/core/: downloader.py  formats.py  history.py  settings.py
draxon/ui/: screens.py  theme.py  widgets.py
ui/: interface.css
utils/: logger.py
